--- a/internal/templates/layouts/base.templ
+++ b/internal/templates/layouts/base.templ
@@ -15,7 +15,18 @@ templ Base(data session.SessionData, title string) {
 			<link rel="stylesheet" href="/public/css/app.css"/>
 			<script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous" defer></script>
 			{{ nonce := ctxutil.GetNonce(ctx) }}
-			<meta name="htmx-config" content={ fmt.Sprintf(`{"inlineScriptNonce":"%s","inlineStyleNonce":"%s"}`, nonce, nonce) }/>
+			<meta
+				name="htmx-config"
+				content={ fmt.Sprintf(`{
+					"responseHandling": [
+						{"code":"204", "swap": false},
+						{"code":"[45]..", "swap": true, "error":true},
+						{"code":"...", "swap": true}
+					],
+					"inlineScriptNonce": "%s",
+					"inlineStyleNonce": "%s"
+				}`, nonce, nonce) }
+			/>
 		</head>
 		<body hx-boost="true" class="flex flex-col min-h-screen">
 			<header>
